# pi-mono-zig

./: .gitignore  AGENTS.md  CLAUDE.md  LEARNINGS.md  README.md  TASKS.md  TODO.md  build.zig  build.zig.zon  package-lock.json  package.json  test_ai.zig  test_anthropic.zig
.github/: APPROVED_CONTRIBUTORS
.github/workflows/: ci.yml  pages.yml  zig-ci.yml
agent/: build.zig  build.zig.zon
agent/src/: agent.zig  agent_loop.zig  proxy.zig  root.zig  types.zig
ai/: build.zig  build.zig.zon
ai/src/: api_registry.zig  env_api_keys.zig  event_stream.zig  models.generated.zig  models.zig  overflow.zig  root.zig  simple_options.zig  transform_messages.zig  types.zig  validation.zig
coding-agent/src/: args.zig  main.zig
examples/: hello.plan.json
mom/src/: main.zig
rust/: .gitignore  Cargo.toml  README.md
rust/crates/pi-cli/: Cargo.toml
rust/crates/pi-cli/src/: main.rs
rust/docs/: 01-prd.md  02-architecture.md  03-technical-spec.md  04-task-breakdown.md  05-test-spec.md
rust/zig-codegen/: tool_registry.zig
rust/zig-kernel/: build.zig
scripts/: check-browser-smoke.mjs  sync-versions.js
shared/: build.zig  build.zig.zon
shared/src/: compat.zig  event_stream.zig  http.zig  json.zig  root.zig
src/: agent_loop.zig  events.zig  json_util.zig  main.zig  mock_model.zig  root.zig  session_manager.zig  session_types.zig  tools.zig
tui/src/: component.zig  root.zig  terminal.zig
zig/: CHANGELOG.md  README.md  build.zig  build.zig.zon
zig/docs/: 01-prd.md  02-architecture.md  03-technical-spec.md  04-task-breakdown.md  05-test-spec.md  REVIEW.md  (+12 more)
(+1140 files in other folders)
