[package]
name = "pi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pi-rs"
path = "src/main.rs"

[dependencies]
pi-ai = { path = "../pi-ai" }
pi-core = { path = "../pi-core" }
pi-session = { path = "../pi-session" }
pi-tools = { path = "../pi-tools" }
pi-zig = { path = "../pi-zig" }
pi-zig-codegen = { path = "../pi-zig-codegen" }
serde_json = "1"
